--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -57,3 +57,11 @@
     flex-direction: column;
     align-items: center;
 }
+
+#joke-header {
+    background: rgb(212, 133, 119);
+}
+
+.joke-container {
+    background: rgb(134, 161, 212);
+}
